SSE send/broadcast/listen interface

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,4 +2,5 @@
   <div>Success!</div>
   <div><a href="/game">Host Game</a></div>
   <div><a href="/connect">Join Game</a></div>
+  <div><a href="/sse-test">SSE Test</a></div>
 </main>
