--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
     <title>A title</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="module" src="main.js"></script>
+    <script type="module" src="sse.js"></script>
   </head>
   <body>
     <%= yield %>
