Everything uses the new SSE interface now

--- a/views/connect.erb
+++ b/views/connect.erb
@@ -1,7 +1,8 @@
 <main>
   <input type="text" id="code" maxlength="4"></input>
   <button id="submit">Join Game</button>
-  <script>
+  <script type="module">
+   import { setupConnectPage } from '/main.js';
    $(setupConnectPage);
   </script>
 </main>
