--- a/views/game.erb
+++ b/views/game.erb
@@ -2,7 +2,8 @@
   <p>
     I am now hosting a session at <span id="code">????</span>.
   </p>
-  <script>
+  <script type="module">
+   import { setupNewGame } from '/main.js';
    $(setupNewGame)
   </script>
 </main>
