--- a/views/sse_test.erb
+++ b/views/sse_test.erb
@@ -4,7 +4,7 @@
 
    $(function() {
 
-     const sse = new SSE();
+     const sse = SSE.get();
 
      sse.addListener(function(data) {
        $("#messages").append(`<li>${data.source} - ${data.message}</li>`);
