Code is all caps

--- a/views/connect.erb
+++ b/views/connect.erb
@@ -1,5 +1,5 @@
 <main>
-  <input type="text" id="code" maxlength="4"></input>
+  <input type="text" id="code" style="text-transform: uppercase" maxlength="4"></input>
   <button id="submit">Join Game</button>
   <script type="module">
    import { setupConnectPage } from '/main.js';
