Live player list

--- a/views/game.erb
+++ b/views/game.erb
@@ -2,6 +2,11 @@
   <p>
     I am now hosting a session at <span id="code">????</span>.
   </p>
+  <div>
+    <p>Players</p>
+    <ul id="player-list">
+    </ul>
+  </div>
   <script type="module">
    import { setupNewGame } from '/main.js';
    $(setupNewGame)
