Better error handling

--- a/views/connect.erb
+++ b/views/connect.erb
@@ -5,7 +5,7 @@
     Status: <span id="connection-status"></span>
   </div>
   <script type="module">
-   import { setupConnectPage } from '/main.js';
+   import { setupConnectPage } from '/connect_page.js';
    $(setupConnectPage);
   </script>
 </main>
