--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,10 +1,9 @@
 <html>
   <head>
     <title>A title</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" integrity="sha512-wNUAk/IKoDcVSiKiN/0ormRTzENc9IbFdHa/BWNuLPtp2kG53TLf5dobOeCHoeafnlaSfjKAiSewS6AJspm/Iw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="module" src="main.js"></script>
-    <script type="module" src="sse.js"></script>
   </head>
   <body>
     <%= yield %>
