Some better styling

--- a/views/connect.erb
+++ b/views/connect.erb
@@ -1,6 +1,10 @@
 <main>
-    <input type="text" id="code" style="text-transform: uppercase" maxlength="4"></input>
-    <button id="submit">Join Game</button>
+  <div class="container">
+    <div class="form-group">
+      <label for="code">Game Code:</label>
+      <input type="text" id="code" class="form-control" style="text-transform: uppercase" maxlength="4"></input>
+      <button id="submit" class="btn btn-primary form-control">Join Game</button>
+    </div>
     <div>
       Status: <span id="connection-status"></span>
     </div>
