--- a/views/game.erb
+++ b/views/game.erb
@@ -1,14 +1,16 @@
 <main>
-  <p>
-    I am now hosting a session at <span id="code">????</span>.
-  </p>
-  <div>
-    <p>Players</p>
-    <ul id="player-list">
-    </ul>
+  <div class="container">
+    <p>
+      I am now hosting a session at <span id="code">????</span>.
+    </p>
+    <div>
+      <p>Players</p>
+      <ul id="player-list">
+      </ul>
+    </div>
+    <script type="module">
+     import { setupNewGame } from '/main.js';
+     $(setupNewGame)
+    </script>
   </div>
-  <script type="module">
-   import { setupNewGame } from '/main.js';
-   $(setupNewGame)
-  </script>
 </main>
