--- a/views/connect.erb
+++ b/views/connect.erb
@@ -1,12 +1,18 @@
 <main>
   <div class="container">
-    <div class="form-group">
-      <label for="code">Game Code:</label>
-      <input type="text" id="code" class="form-control" style="text-transform: uppercase" maxlength="4"></input>
-      <button id="submit" class="btn btn-primary form-control">Join Game</button>
+    <div class="form-row">
+      <div class="col"><label for="code">Game Code:</label></div>
+      <div class="col"><input type="text" id="code" class="form-control" style="text-transform: uppercase" maxlength="4"></input></div>
     </div>
-    <div>
-      Status: <span id="connection-status"></span>
+    <div class="form-row">
+      <div class="col">
+        <button id="submit" class="btn btn-primary form-control">Join Game</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        Status: <span id="connection-status"></span>
+      </div>
     </div>
     <script type="module">
      import { setupConnectPage } from '/connect_page.js';
