--- a/views/connect.erb
+++ b/views/connect.erb
@@ -1,16 +1,18 @@
 <main>
   <div class="container">
     <div class="form-row">
-      <div class="col"><label for="code">Game Code:</label></div>
-      <div class="col"><input type="text" id="code" class="form-control" style="text-transform: uppercase" maxlength="4"></input></div>
+      <div class="col-sm-12"><label for="code">Game Code:</label></div>
     </div>
     <div class="form-row">
-      <div class="col">
+      <div class="col-sm-12"><input type="text" id="code" class="form-control" style="text-transform: uppercase" maxlength="4"></input></div>
+    </div>
+    <div class="form-row">
+      <div class="col-sm-12">
         <button id="submit" class="btn btn-primary form-control">Join Game</button>
       </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col-sm-12">
         Status: <span id="connection-status"></span>
       </div>
     </div>
