Player name on join screen

--- a/views/joined.erb
+++ b/views/joined.erb
@@ -2,6 +2,10 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-2">
+        You are
+        <strong id="player-name">????</strong>
+      </div>
+      <div class="col-sm-2">
         You are in game
         <strong id="game-code">????</strong>
       </div>
