Game info header

--- a/views/joined.erb
+++ b/views/joined.erb
@@ -1,14 +1,5 @@
 <main>
   <div class="container">
-    <div class="row">
-      <div class="col-sm-2">
-        You are
-        <strong id="player-name">????</strong>
-      </div>
-      <div class="col-sm-2">
-        You are in game
-        <strong id="game-code">????</strong>
-      </div>
-    </div>
+    <%= erb :game_info_header %>
   </div>
 </main>
