--- a/views/info.erb
+++ b/views/info.erb
@@ -1,18 +1,13 @@
 <main>
   <div class="container">
+    <%= erb :game_info_header %>
     <div class="row">
-      <div class="col-md-2">
-        You are
-        <strong id="player-name">????</strong>
-      </div>
-      <div class="col-md-2">
-        You are in game
-        <strong id="game-code">????</strong>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12" id="informational-message">
-        ????
+      <div class="col-md-12">
+        <div class="card"> <% # ///// Refine me %>
+          <div class="card-body" id="informational-message">
+            ????
+          </div>
+        </div>
       </div>
     </div>
   </div>
