--- a/views/info.erb
+++ b/views/info.erb
@@ -3,7 +3,7 @@
     <%= erb :game_info_header %>
     <div class="row">
       <div class="col-md-12">
-        <div class="card"> <% # ///// Refine me %>
+        <div class="card"> <!-- ///// Refine me -->
           <div class="card-body" id="informational-message">
             ????
           </div>
