--- a/views/connect.erb
+++ b/views/connect.erb
@@ -1,19 +1,19 @@
 <main>
   <div class="container">
 
-    <div class="form-row">
-      <div class="form-group col-md-6">
+    <div class="row">
+      <div class="col-md-6">
         <label for="code">Game Code:</label>
         <input type="text" id="code" class="form-control" style="text-transform: uppercase" maxlength="4"></input>
       </div>
-      <div class="form-group col-md-6">
+      <div class="col-md-6">
         <label for="code">Your Name:</label>
         <input type="text" id="player-name" class="form-control" maxlength="15"></input>
       </div>
     </div>
 
-    <div class="form-row">
-      <div class="form-group col-md-12">
+    <div class="row">
+      <div class="col-md-12">
         <button id="submit" class="btn btn-primary form-control">Join Game</button>
       </div>
     </div>
