--- a/views/game.erb
+++ b/views/game.erb
@@ -15,12 +15,12 @@
       </div>
     </div>
 
-    <div class="form-row">
-      <div class="form-group col-md-8">
+    <div class="row">
+      <div class="col-md-8">
         <input type="text" id="info-message" class="form-control" placeholder="Informational Message"></input>
       </div>
-      <div class="form-group col-md-4">
-        <button id="send-info-message" class="btn">Send Info Message</button>
+      <div class="col-md-4">
+        <button id="send-info-message" class="btn btn-secondary">Send Info Message</button>
       </div>
     </div>
 
