--- a/views/index.erb
+++ b/views/index.erb
@@ -3,4 +3,5 @@
   <div><a href="/game">Host Game</a></div>
   <div><a href="/connect">Join Game</a></div>
   <div><a href="/sse-test">SSE Test</a></div>
+  <div><a href="/render-test">Render Test</a></div>
 </main>
