--- a/views/render_test.erb
+++ b/views/render_test.erb
@@ -32,6 +32,14 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-16">
+        <div id="html-preload">
+          ...
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <script type="module">
