Updated index page to use Bootstrap

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,23 @@
 <main>
-  <div>Success!</div>
-  <div><a href="/game">Host Game</a></div>
-  <div><a href="/connect">Join Game</a></div>
-  <div><a href="/sse-test">SSE Test</a></div>
-  <div><a href="/render-test">Render Test</a></div>
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-12">
+        <p>Success!</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="list-group">
+          <a class="list-group-item" href="/game">Host Game</a>
+          <a class="list-group-item" href="/connect">Join Game</a>
+          <a class="list-group-item" href="/sse-test">SSE Test</a>
+          <a class="list-group-item" href="/render-test">Render Test</a>
+          <a class="list-group-item" href="/remote-control-test">Remote Control Test</a>
+        </ul>
+      </div>
+    </div>
+
+  </div>
 </main>
