Moved remote control files to subdirectory

--- a/views/remote_control/info.erb
+++ b/views/remote_control/info.erb
@@ -1,6 +1,6 @@
 <main>
   <div class="container">
-    <%= erb :game_info_header %>
+    <%= erb :'remote_control/game_info_header' %>
     <div class="row">
       <div class="col-md-12">
         <div class="card">
