--- a/views/remote_control/joined.erb
+++ b/views/remote_control/joined.erb
@@ -1,5 +1,5 @@
 <main>
   <div class="container">
-    <%= erb :game_info_header %>
+    <%= erb :'remote_control/game_info_header' %>
   </div>
 </main>
