--- a/views/remote_control_test.erb
+++ b/views/remote_control_test.erb
@@ -9,6 +9,18 @@
 
     <div class="row">
       <div class="col-md-12">
+        <h2>Joined banner</h2>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div id="joined-banner"></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
         <h2>Info banner</h2>
       </div>
     </div>
@@ -16,6 +28,18 @@
     <div class="row">
       <div class="col-md-12">
         <div id="info-banner"></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Freeform banner</h2>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div id="freeform-banner"></div>
       </div>
     </div>
 
