--- a/public/style.css
+++ b/public/style.css
@@ -2,3 +2,14 @@
 main {
     margin: 20px;
 }
+
+input.no-spin-buttons {
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
+    appearance: textfield;
+}
+
+input.no-spin-buttons[type=number]::-webkit-inner-spin-button,
+input.no-spin-buttons[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+}
