--- a/views/remote_control/freeform_question.erb
+++ b/views/remote_control/freeform_question.erb
@@ -8,7 +8,7 @@
             ????
           </div>
 
-          <div class="container">
+          <div class="container pb-2">
             <div class="row">
               <div class="col-md-8">
                 <input id="question-answer" class="form-control no-spin-buttons" type="number"
