Freeform message from main.ts

--- a/views/game.erb
+++ b/views/game.erb
@@ -24,6 +24,15 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-8">
+        <input type="text" id="freeform-message" class="form-control" placeholder="Freeform Question"></input>
+      </div>
+      <div class="col-md-4">
+        <button id="send-freeform-message" class="btn btn-secondary">Send Freeform Question</button>
+      </div>
+    </div>
+
     <script type="module">
      import { setupNewGame } from '/main.js';
      $(setupNewGame)
