--- a/views/connect.erb
+++ b/views/connect.erb
@@ -19,8 +19,8 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-12">
-        Status: <span id="connection-status"></span>
+      <div class="col-md-12">
+        <div id="alert-feedback"></div>
       </div>
     </div>
 
