"Start game" button

--- a/views/game.erb
+++ b/views/game.erb
@@ -16,20 +16,8 @@
     </div>
 
     <div class="row">
-      <div class="col-md-8">
-        <input type="text" id="info-message" class="form-control" placeholder="Informational Message"></input>
-      </div>
-      <div class="col-md-4">
-        <button id="send-info-message" class="btn btn-secondary">Send Info Message</button>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-8">
-        <input type="text" id="freeform-message" class="form-control" placeholder="Freeform Question"></input>
-      </div>
-      <div class="col-md-4">
-        <button id="send-freeform-message" class="btn btn-secondary">Send Freeform Question</button>
+      <div class="col-md-12">
+        <button class="btn btn-primary" id="start-game" disabled="" aria-disabled="">Start Game</button>
       </div>
     </div>
 
