Game host displays questions now

--- a/views/running_game.erb
+++ b/views/running_game.erb
@@ -4,7 +4,7 @@
     <div class="row" id="player-status-header">
     </div>
 
-    <div class="row">
+    <div class="row" id="game-row">
       <div class="col-md-12">
         In game
       </div>
