Debug code to show responses

--- a/views/running_game.erb
+++ b/views/running_game.erb
@@ -6,7 +6,14 @@
 
     <div class="row" id="game-row">
       <div class="col-md-12">
-        In game
+        Loading ...
+      </div>
+    </div>
+
+    <!-- DEBUG CODE -->
+    <div class="row">
+      <div class="col-md-12">
+        <button class="btn btn-primary" id="end-question">End Question</button>
       </div>
     </div>
 
