--- a/views/remote_control_test.erb
+++ b/views/remote_control_test.erb
@@ -55,6 +55,18 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Selectall banner</h2>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div id="selectall-banner"></div>
+      </div>
+    </div>
+
   </div>
 
   <script type="module">
