--- a/views/lua_test.erb
+++ b/views/lua_test.erb
@@ -10,6 +10,7 @@
   </div>
 
   <script type="module">
-   // ...
+   import { runTest } from './lua_test.js';
+   $(runTest);
   </script>
 </main>
