Embedded Lua interpreter

--- a/views/lua_test.erb
+++ b/views/lua_test.erb
@@ -7,6 +7,15 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-8">
+        <input type="text" id="lua-code" class="form-control"></input>
+      </div>
+      <div class="col-md-4">
+        <button id="submit" class="btn btn-primary form-control">Run</button>
+      </div>
+    </div>
+
   </div>
 
   <script type="module">
