Embedding Lua scripts in the virtual Emscripten file system

--- a/views/lua_test.erb
+++ b/views/lua_test.erb
@@ -16,6 +16,12 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-12">
+        <button id="example-file-run" class="btn btn-secondary form-control">Run Example Lua File</button>
+      </div>
+    </div>
+
   </div>
 
   <script type="module">
