lua_test uses LuaGenerator now

--- a/views/lua_test.erb
+++ b/views/lua_test.erb
@@ -22,6 +22,12 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-12">
+        <button id="example-file-close" class="btn btn-secondary form-control">Close Example Lua File</button>
+      </div>
+    </div>
+
   </div>
 
   <script type="module">
